# src

./: .~lock.Descrizione.odt#  Descrizione.odt
baseline/: CMakeLists.txt  package.xml
baseline/src/: gen_baseline.cpp  gen_baseline_gtpose.cpp
generazione/: CMakeLists.txt
generazione/src/: generatore.cpp
integrazione/: CMakeLists.txt  package.xml
integrazione/cfg/: metodi.cfg
integrazione/launch/: launcher.launch
integrazione/src/: integratore.cpp
launch/: launcher.launch
robotics_hw1/: CMakeLists.txt
robotics_hw1/msg/: WheelSpeeds.msg
rviz_publishing/: CMakeLists.txt
rviz_publishing/config/: odom_eulero_rk.rviz
rviz_publishing/launch/: rviz.launch
rviz_publishing/src/: rviz_publisher.cpp  rviz_publisher_gtpose.cpp  rviz_publisher_scoutodom.cpp
service/: CMakeLists.txt  package.xml
service/src/: client.cpp  reset_zero.cpp
service/srv/: GivenPose.srv  ResetZero.srv
sincronizzazione/: CMakeLists.txt  package.xml
sincronizzazione/src/: sincronizzatore.cpp
